examples/test/testpolicy9377.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9377
  namespace: namespace354
spec:
  podSelector:
    matchLabels:
      key14: value20
      key18: value18
      key24: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value29
          key35: value39
      podSelector:
        matchLabels:
          key14: value20
          key4: value2
